...
                    android:id="@+id/to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.infomaniak.mail.ui.newMessage.RecipientFieldView
                        android:id="@+id/toField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/marginStandardVerySmall"
                        app:canCollapseEverything="true"
                        app:title="@string/toTitle" />

...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <com.infomaniak.mail.ui.newMessage.RecipientFieldView
                        android:id="@+id/ccField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/marginStandardVerySmall"
                        app:canCollapseEverything="false"
                        app:title="@string/ccTitle" />

...
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <com.infomaniak.mail.ui.newMessage.RecipientFieldView
                        android:id="@+id/bccField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/marginStandardVerySmall"
                        app:canCollapseEverything="false"
                        app:title="@string/bccTitle" />

...
                        android:text="@string/subjectTitle"
                        app:layout_constraintBottom_toBottomOf="@id/subjectTextFieldGuide"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/subjectTextFieldGuide" />

                    <com.infomaniak.mail.ui.newMessage.ComposeSubject
                        android:id="@+id/subjectTextField"
                        style="@style/EmailAddressTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/marginStandardVerySmall"
                        android:layout_marginTop="@dimen/marginStandardVerySmall"
                        android:imeOptions="actionNext"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/attachmentsRecyclerView"
                        tools:layout_height="100dp" />

                    <TextView
                        android:id="@+id/newMessagePlaceholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/marginStandardMedium"
                        android:paddingBottom="@dimen/marginStandardMedium"
                        android:text="@string/newMessagePlaceholderTitle"
...
                            android:visibility="gone"
                            app:icon="@drawable/ic_param_dots"
                            app:iconTint="@color/icon_button_disabled"
                            tools:visibility="visible" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/sendButton"
                            style="@style/IconButton"
                            android:layout_width="@dimen/newMessageToolbarItemWidth"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/send"
                            app:icon="@drawable/ic_send" />

...
