...
        android:id="@+id/selectionCardView"
        style="@style/CardViewMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        android:layout_marginStart="@dimen/marginStandardVerySmall"
        android:nextFocusRight="@id/newMessageFab"
        app:cardCornerRadius="@null"
        app:cardPreventCornerOverlap="false"
        app:shapeAppearanceOverlay="@style/RoundedDecoratedTextItemShapeAppearance">

        <!-- This needs to be passed as the handle used for dragging cards around in the DragDropSwipeRecyclerview library -->
        <View
...
                    tools:text="@tools:sample/date/hhmm" />

                <FrameLayout
                    android:id="@+id/iconReplyOrForwardLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/mailSubject"
                    app:layout_constraintEnd_toStartOf="@id/mailSubject"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/mailSubject">

                    <ImageView
                        android:id="@+id/iconForward"
...
