...
            <com.infomaniak.mail.views.AvatarView
                android:id="@+id/userAvatar"
                android:layout_width="38dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/userMailAddress"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@id/userName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/userName"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/userName"
...
