...
        android:id="@+id/searchViewCard"
        layout="@layout/item_search_view"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/marginStandard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/userAvatar"
        app:layout_constraintStart_toEndOf="@id/menuDrawerButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userAvatar"
        android:layout_width="32dp"
...
