...
        CollapseFolder("collapseFolder"),
        ColorFolder("colorFolder"),
        CommercialFolder("commercialFolder"),
        Confetti("confetti"),
        ConfigureInstall("configureInstall"),
        ConfigureReady("configureReady"),
        Confirm("confirm"),
        ConfirmSelectedUser("confirmSelectedUser"),
        Conversation("conversation"),
        ConvertToDropbox("convertToDropbox"),
        CopyEmailAddress("copyEmailAddress"),
        CustomFolder("customFolder"),
        CustomFolders("customFolders"),
...
