appId: com.infomaniak.mail
---
- tapOn:
    id: newMessageFab
- tapOn:
    text: 'Later'
    optional: true
- tapOn:
    id: toField
- inputText: '${ACCOUNT_EMAIL}'
- tapOn:
    id: userName
- tapOn:
    id: ccField
- inputText: '${ACCOUNT_EMAIL}'
- tapOn:
    id: userName
- tapOn:
    id: bccField
- inputText: '${ACCOUNT_EMAIL}'
- tapOn:
    id: userName
- runScript: ../scripts/generateUUID.js
- tapOn:
    id: subjectTextField
- inputText: 'UI test mail #${output.generatedId}'
- tapOn:
    id: newMessagePlaceholder
- inputText: 'This is an email from UI test'
- tapOn:
    id: sendButton
- assertVisible:
    id: mailSubject
    text: '.*${output.generatedId}'
