appId: com.infomaniak.mail
---
- tapOn:
    id: userAvatar
- tapOn: 'Log out'
- tapOn: 'Confirm'
